CSS Specific Font

--- a/bootstrap/css/podcast.css
+++ b/bootstrap/css/podcast.css
@@ -293,6 +293,14 @@ footer
 
 @media screen and (max-width: 768px) {
 
+	.jumbotron h1
+	{
+		font-size: 77px;
+
+		color:#FFF;
+	
+	
+	}
 	
 	.navbar-right > li
 	{
