--- a/bootstrap/css/podcast.css
+++ b/bootstrap/css/podcast.css
@@ -329,6 +329,13 @@ footer
 		margin-bottom:0px;
 	}
 	
+	div.jumbotron
+	{
+	
+		background-size: 720px 375px;
+	
+	}
+	
     /*.row {
            position: relative;
        }
@@ -361,4 +368,18 @@ footer
        }
    }
 		*/
+}
+
+@media only screen and (orientation: portrait) and (device-width: 320px), (device-width: 768px) {
+    header {
+      -webkit-background-size: auto 150%;
+      background-attachment: scroll;
+    }
+}
+@media only screen and (orientation: landscape) and (device-width: 320px), (device-width: 768px) {
+
+    header {
+      -webkit-background-size: 150% auto;
+      background-attachment: scroll;
+    }
 }
